# listenmoe-gnome-app

./: .appimage-builder.yml  Cargo.toml  README.md  build.rs
.github/workflows/: linux.yml  rust.yml  win.yml
icons/: resources.xml
src/: config.rs  listen.rs  main.rs  meta.rs  setup.rs  ui.rs
